Central Data repository created, basic tables can be viewed

--- a/src/data_collection/templates/index.html
+++ b/src/data_collection/templates/index.html
@@ -21,6 +21,7 @@
       </form>
     </div>
     <a href="/viewfiles"><button value="ALL FILES" style="position: realtive; transform:translate(80%,80%)"> ALL FILES </button></a>
+    <a href="/viewdata"><button value="VIEW DATA" style="position: realtive; transform:translate(80%,80%)"> VIEW DATA </button></a>
 </body>
 </html>
 
