Added plotting utility

--- a/src/data_collection/templates/index.html
+++ b/src/data_collection/templates/index.html
@@ -20,8 +20,9 @@
         <input id="submit_btn" type="submit" value="Submit"><br/>
       </form>
     </div>
-    <a href="/viewfiles"><button value="ALL FILES" style="position: realtive; transform:translate(80%,80%)"> ALL FILES </button></a>
-    <a href="/viewdata"><button value="VIEW DATA" style="position: realtive; transform:translate(80%,80%)"> VIEW DATA </button></a>
+    <a href="/viewfiles"><button value="ALL FILES" style="transform:translate(80%,80%)">ALL FILES</button></a>
+    <a href="/viewdata"><button value="VIEW DATA" style=" transform:translate(80%,80%)">VIEW DATA</button></a>
+    <a href="/plotdata"><button value="VIEW CHARTS" style="transform:translate(80%,80%)">VIEW CHARTS</button></a>
 </body>
 </html>
 
