--- a/src/data_collection/templates/plotdata.html
+++ b/src/data_collection/templates/plotdata.html
@@ -3,34 +3,56 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdn.rawgit.com/harvesthq/chosen/gh-pages/chosen.jquery.min.js"></script>
     <link href="https://cdn.rawgit.com/harvesthq/chosen/gh-pages/chosen.min.css" rel="stylesheet" />
-
-
+    <script src='https://cdn.plot.ly/plotly-2.27.0.min.js'></script>
+    <!-- <script src="https://malsup.github.io/jquery.form.js"></script>  -->
 </head>
 
 <body>
-    <form enctype="multipart/form-data" method=post action="/getchartingdata" id="chart">
+    <a href="{{ url_for('upload_file') }}">
+        <h4><svg xmlns="http://www.w3.org/2000/svg" height="1em"
+              viewBox="0 0 576 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+              <style>
+                 svg {
+                    fill: #000000
+                 }
+              </style>
+              <path
+                 d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z" />
+           </svg></h4>
+     </a>
+    <form enctype="multipart/form-data" id="chartForm">
         <label for="sensors">Choose sensors:</label>
-        <select data-placeholder="Select Sensors" multiple class="chosen-select" name="sensors">
+        <select data-placeholder="Select Sensors" multiple class="chosen-select" name="sensors" id="sensors">
             <option value=""></option>
-            <option value="grimm">Grimm OPC</option>
-            <option value="partector">Partector</option>
-            <option value="purpleair">Purple Air Flex II</option>
-            <option value="n3">Alphasense OPC N3</option>
-            <option value="atmos">UrbanSciences Atmos</option>
+            <option value="Grimm">Grimm OPC</option>
+            <option value="Partector">Partector</option>
+            <option value="PurpleAir">Purple Air Flex II</option>
+            <option value="N3">Alphasense OPC N3</option>
+            <option value="Atmos">UrbanSciences Atmos</option>
         </select>
         FROM
         <input type="datetime-local" id="start" name="start">
         TO
         <input type="datetime-local" id="end" name="end">
-        <input id="submit_btn" type="submit" value="Submit"><br />
+        <button type="button" id="submit_btn" value="Submit">SUBMIT</button><br/>
     </form>
     <div id="chartcontainer"></div>
-
     <script>
         $(".chosen-select").chosen({width: "40%"}); 
-        data = fetch('/')
         $(".chosen-select").chosen({
             no_results_text: "Oops, nothing found!"
           })
+        //import {chartData} from "static/charting.js"
+        
+      
+      
+
     </script>   
+    <script type="module">   
+        import {chartData} from "../static/charting.js"     
+        $('#submit_btn').click(function(){
+            console.log('CLICKED')
+            chartData($('#chartForm').serialize())
+        })
+    </script>
 </body>
