--- a/src/data_collection/templates/dashboard.html
+++ b/src/data_collection/templates/dashboard.html
@@ -85,7 +85,7 @@
               </div>
               <div class="card card-default">
                 <div class="card-header justify-content-center">
-                  <h2 class="text-center">PM2.5</h2>
+                  <h2 class="text-center">PM DATA</h2>
                 </div>
                 <div class="card card-default">
                   <div id="chartcontainer"></div>
