--- a/src/data_collection/templates/dashboard.html
+++ b/src/data_collection/templates/dashboard.html
@@ -102,7 +102,16 @@
                 <div class="card-body">
                   <h3 id="N3_live">0</h3>
                   <p>Last updated on:</p>
-                  <p id="last_update"></p>
+                  <p id="last_update_n3"></p>
+                </div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class=" card card-default">
+                <div class="card-body">
+                  <h3 id="Atmos_live">0</h3>
+                  <p>Last updated on:</p>
+                  <p id="last_update_atmos"></p>
                 </div>
               </div>
             </div>
@@ -142,10 +151,18 @@
         const response = await fetch('/getlive/N3')
         const data = await response.json()
         $('#N3_live').text(data['pm2.5']);
-        $('#last_update').text(data['timestamp']);
-        $()
+        $('#last_update_n3').text(data['timestamp']);
       }
+
+      async function getLiveAtmos() {
+        const response = await fetch('/getlive/Atmos')
+        const data = await response.json()
+        $('#Atmos_live').text(data['pm2.5']);
+        $('#last_update_atmos').text(data['timestamp']);
+      }
+
       setInterval(getLiveN3, 1000);
+      setInterval(getLiveAtmos, 1000);
     </script>
 </body>
 
