Broken Dashbord into separate pages, Added a new page for analysis of data, Added a new module for async threads Fixed Atmos data collection

--- a/src/data_collection/static/assets/components/sidebar.html
+++ b/src/data_collection/static/assets/components/sidebar.html
@@ -36,6 +36,12 @@
                     <span class="nav-text">View All Files</span>
                 </a>
             </li>
+            <li>
+                <a class="sidenav-item-link" href="/analysis">
+                    <i class="mdi mdi-chart-line"></i>
+                    <span class="nav-text">Analyse Data</span>
+                </a>
+            </li>
         </ul>
     </div>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplebar@6.2.5/dist/simplebar.min.css">
