--- a/src/data_collection/static/assets/css/gauge.css
+++ b/src/data_collection/static/assets/css/gauge.css
@@ -2,6 +2,14 @@
     display: inline-block;
 }
 
+.gauge_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 30px;
+}
+
 .gauge>div[role=meter] {
     border-radius: 8rem 8rem 0 0;
     border: 1px solid black;
@@ -17,12 +25,13 @@
             #ff7e00 330deg 360deg);
 }
 
-.gauge>label {
-    font-size: 14px;
+.gauge-label {
+    font-size: 18px;
     text-align: center;
-    background-color: black;
-    padding: .2rem 0;
-    display: block;
+    background-color: transparent;
+    color: rgba(0, 0, 0, 0.7);
+    font-family: 'Roboto', sans-serif;
+    /* display: block; */
 }
 
 .dial {
@@ -44,6 +53,7 @@
     border-bottom: none;
     box-sizing: border-box;
     color: #000;
+    font-family: 'Roboto', sans-serif;
 }
 
 .dial.white {
@@ -99,9 +109,5 @@
     .gauge>div[role=meter] {
         border-width: 2px;
         border-bottom: none;
-    }
-
-    .gauge>label {
-        border: 2px solid black;
     }
 }
