--- a/src/data_collection/templates/dashboard.html
+++ b/src/data_collection/templates/dashboard.html
@@ -29,7 +29,7 @@
   <script src='assets/plugins/daterangepicker/daterangepicker.js'></script>
   <script src='assets/js/date-range.js'></script>
   <script src="assets/js/sleek.js"></script>
-  <script src="assets/js/gauge.js"></script>
+  <script src="assets/js/gauge.js" type="module"></script>
   <link href="assets/css/optionswitch.css" rel="stylesheet">
   <script src="assets/js/optionswitcher.js"></script>
   <script src="https://cdn.rawgit.com/harvesthq/chosen/gh-pages/chosen.jquery.min.js"></script>
@@ -37,13 +37,7 @@
   <script src='https://cdn.plot.ly/plotly-2.27.0.min.js'></script>
 </head>
 
-<!-- <body class="sidebar-fixed sidebar-dark" id="body"> -->
-
 <body class="sidebar-fixed sidebar-dark">
-  <script>
-    NProgress.configure({ showSpinner: false });
-    NProgress.start();
-  </script>
   <div class="wrapper">
     <aside class="left-sidebar bg-sidebar">
       <div data-include="sidebar"></div>
@@ -51,119 +45,73 @@
     <div class="page-wrapper">
       <div class="content-wrapper">
         <div class="content">
+          <h2 class="text-center">AlphaSense OPC N3 Live</h2>
           <div class="row">
-            <div class="col-12">
-              <div class=" card card-default">
-                <div class="card-body">
-                  <form enctype="multipart/form-data" id="chartForm" class="form-group">
-                    <label for="sensors">Choose sensors:</label>
-                    <select data-placeholder="Select Sensors" multiple class="chosen-select" name="sensors"
-                      id="sensors">
-                      <option value=""></option>
-                      <option value="Grimm">Grimm OPC</option>
-                      <option value="PurpleAir">Purple Air Flex II</option>
-                      <option value="N3">Alphasense OPC N3</option>
-                      <option value="Atmos">UrbanSciences Atmos</option>
-                    </select>
-                    <label for="start">FROM</label>
-                    <input type="datetime-local" id="start" name="start">
-                    <label for="end">TO</label>
-                    <input type="datetime-local" id="end" name="end">
-                    <!-- Add new radio button for pm2.5, pm10 and pm1.0 -->
-                    <br /><label for="pm">PM:
-                      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
-                    <select data-placeholder="Select PM" multiple class="chosen-select" name="pm" id="pm">
-                      <option value="pm2.5" selected>PM2.5</option>
-                      <option value="pm10">PM10</option>
-                      <option value="pm1">PM1.0</option>
-                    </select><br /><br />
-                    <div class='text-center'><button type="button" id="submit_btn" value="Submit"
-                        class="btn btn-primary btn-sm text-center">SUBMIT</button></div>
-                    <script>
-                      $('#start').attr('value', new Date().toISOString().split('T')[0] + 'T00:00');
-                      $('#end').attr('value', new Date().toISOString().split('T')[0] + 'T00:00')
-                    </script>
-                  </form>
-                </div>
-              </div>
-              <div class="card card-default">
-                <div class="card-header justify-content-center">
-                  <h2 class="text-center">PM DATA</h2>
-                </div>
-                <div class="card card-default">
-                  <div id="chartcontainer"></div>
-                </div>
-              </div>
+            <div class="card card-default col gauge_container">
+              <div data-include="pm_gauge" id="n3_pm1"></div>
+              <label class="gauge-label" id="meter-label">OPC N3 PM1.0</label>
+            </div>
+            <div class="card card-default col gauge_container">
+              <div data-include="pm_gauge" id="n3_pm25"></div>
+              <label class="gauge-label" id="meter-label">OPC N3 PM2.5</label>
+            </div>
+            <div class="card card-default col gauge_container">
+              <div data-include="pm_gauge" id="n3_pm10"></div>
+              <label class="gauge-label" id="meter-label">OPC N3 PM10</label>
             </div>
           </div>
+          <h2 class="text-center">Urban Sciences Atmos Live</h2>
           <div class="row">
-            <div class="col-4">
-              <div class=" card card-default">
-                <div class="card-body">
-                  <h3 id="N3_live">0</h3>
-                  <p>Last updated on:</p>
-                  <p id="last_update_n3"></p>
-                </div>
-              </div>
+            <div class="card card-default col gauge_container">
+              <div data-include="pm_gauge" id="atmos_pm1"></div>
+              <label class="gauge-label" id="meter-label">ATMOS PM1.0</label>
             </div>
-            <div class="col-4">
-              <div class=" card card-default">
-                <div class="card-body">
-                  <h3 id="Atmos_live">0</h3>
-                  <p>Last updated on:</p>
-                  <p id="last_update_atmos"></p>
-                </div>
-              </div>
+            <div class="card card-default col gauge_container">
+              <div data-include="pm_gauge" id="atmos_pm25" style="justify-content: center"></div>
+              <label class="gauge-label" id="meter-label">ATMOS PM2.5</label>
             </div>
+            <div class="card card-default col gauge_container">
+              <div data-include="pm_gauge" id="atmos_pm10"></div>
+              <label class="gauge-label" id="meter-label">ATMOS PM10</label>
+            </div>
+          </div>
+        </div>
+      </div>
+      <script>
+        $(".chosen-select").chosen({ width: "40%" });
+        $(".chosen-select").chosen({
+          no_results_text: "Oops, nothing found!"
+        })
+      </script>
+      <script type="module">
+        import { updateDial } from './assets/js/gauge.js';
+        async function getLiveN3() {
+          const response = await fetch('/getlive/N3')
+          await response.json().then(data => {
+            $('#N3_live').text(data['pm2.5']);
+            $('#last_update_n3').text(data['timestamp']);
+            updateDial(data['pm1'], 'n3_pm1');
+            updateDial(data['pm2.5'], 'n3_pm25');
+            updateDial(data['pm10'], 'n3_pm10');
+          });
+        }
 
-            <!-- TODO: Add a gauge for N3 live data -->
-            <!--<div class="col-4">
-              <div class=" card card-default">
-                 <div style="margin-bottom: 2rem;"><label for="set-aqi">Set AQI:</label><input type="range" id="set-aqi" min="0" max="500" value="10"></div> 
-                <div class="gauge">
-                  <div role="meter" aria-valuemin="0" aria-valuemax="500" aria-labelledby="meter-label">
-                    <div class="dial"><span class="aqi-num"></span><span>AQI</span>
-                      <div class="arrow"></div>
-                    </div>
-                  </div>
-                  <label class="label" id="meter-label">OPC N3 Live PM2.5 AQI</label>
-                </div> 
-              </div>
-            </div>-->
-          </div> <!-- End Content -->
-        </div> <!-- End Content Wrapper -->
-      </div> <!-- End Page Wrapper -->
-    </div> <!-- End Wrapper -->
-    <script>
-      $(".chosen-select").chosen({ width: "40%" });
-      $(".chosen-select").chosen({
-        no_results_text: "Oops, nothing found!"
-      })
-    </script>
-    <script type="module">
-      import { chartData } from "/assets/js/charting.js"
-      $('#submit_btn').click(function () {
-        console.log('CLICKED')
-        chartData($('#chartForm').serialize())
-      })
+        async function getLiveAtmos() {
+          const response = await fetch('/getlive/Atmos')
+          await response.json().then(data => {
+            $('#Atmos_live').text(data['pm2.5']);
+            $('#last_update_atmos').text(data['timestamp']);
+            updateDial(data['pm1'], 'atmos_pm1');
+            updateDial(data['pm2.5'], 'atmos_pm25');
+            updateDial(data['pm10'], 'atmos_pm10');
+          });
+        }
 
-      async function getLiveN3() {
-        const response = await fetch('/getlive/N3')
-        const data = await response.json()
-        $('#N3_live').text(data['pm2.5']);
-        $('#last_update_n3').text(data['timestamp']);
-      }
+        setTimeout(getLiveAtmos, 2000);
 
-      async function getLiveAtmos() {
-        const response = await fetch('/getlive/Atmos')
-        const data = await response.json()
-        $('#Atmos_live').text(data['pm2.5']);
-        $('#last_update_atmos').text(data['timestamp']);
-      }
-
-      setInterval(getLiveN3, 1000);
-      setInterval(getLiveAtmos, 10000);
-    </script>
+        setInterval(getLiveN3, 1000);
+        setInterval(getLiveAtmos, 10000);
+      </script>
 </body>
 
 </html>
