Fixed broken chart analysis board

--- a/src/data_collection/templates/analyse.html
+++ b/src/data_collection/templates/analyse.html
@@ -86,43 +86,16 @@
                   </form>
                 </div>
               </div>
+              <div class="card card-default">
+                <div class="card-header justify-content-center">
+                  <h2 class="text-center">PM DATA</h2>
+                </div>
+                <div class="card card-default">
+                  <div id="chartcontainer"></div>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="row">
-            <div class="col-4">
-              <div class=" card card-default">
-                <div class="card-body">
-                  <h3 id="N3_live">0</h3>
-                  <p>Last updated on:</p>
-                  <p id="last_update_n3"></p>
-                </div>
-              </div>
-            </div>
-            <div class="col-4">
-              <div class=" card card-default">
-                <div class="card-body">
-                  <h3 id="Atmos_live">0</h3>
-                  <p>Last updated on:</p>
-                  <p id="last_update_atmos"></p>
-                </div>
-              </div>
-            </div>
-
-            <!-- TODO: Add a gauge for N3 live data -->
-            <!--<div class="col-4">
-              <div class=" card card-default">
-                 <div style="margin-bottom: 2rem;"><label for="set-aqi">Set AQI:</label><input type="range" id="set-aqi" min="0" max="500" value="10"></div> 
-                <div class="gauge">
-                  <div role="meter" aria-valuemin="0" aria-valuemax="500" aria-labelledby="meter-label">
-                    <div class="dial"><span class="aqi-num"></span><span>AQI</span>
-                      <div class="arrow"></div>
-                    </div>
-                  </div>
-                  <label class="label" id="meter-label">OPC N3 Live PM2.5 AQI</label>
-                </div> 
-              </div>
-            </div>-->
-          </div> <!-- End Content -->
         </div> <!-- End Content Wrapper -->
       </div> <!-- End Page Wrapper -->
     </div> <!-- End Wrapper -->
