--- a/src/data_collection/templates/dashboard.html
+++ b/src/data_collection/templates/dashboard.html
@@ -45,38 +45,65 @@
     <div class="page-wrapper">
       <div class="content-wrapper">
         <div class="content">
-          <h2 class="text-center">AlphaSense OPC N3 Live</h2>
-          <div class="row">
-            <div class="card card-default col gauge_container">
-              <div data-include="pm_gauge" id="n3_pm1"></div>
-              <label class="gauge-label" id="meter-label">OPC N3 PM1.0</label>
+
+          <div name="Gauge OPC N3">
+            <h2 class="text-center pb-10">AlphaSense OPC N3 Live</h2>
+            <div class="row">
+              <div class="card card-default col gauge_container">
+                <div data-include="pm_gauge" id="n3_pm1"></div>
+                <label class="gauge-label" id="meter-label">OPC N3 PM1.0</label>
+              </div>
+              <div class="card card-default col gauge_container">
+                <div data-include="pm_gauge" id="n3_pm25"></div>
+                <label class="gauge-label" id="meter-label">OPC N3 PM2.5</label>
+              </div>
+              <div class="card card-default col gauge_container">
+                <div data-include="pm_gauge" id="n3_pm10"></div>
+                <label class="gauge-label" id="meter-label">OPC N3 PM10</label>
+              </div>
             </div>
-            <div class="card card-default col gauge_container">
-              <div data-include="pm_gauge" id="n3_pm25"></div>
-              <label class="gauge-label" id="meter-label">OPC N3 PM2.5</label>
-            </div>
-            <div class="card card-default col gauge_container">
-              <div data-include="pm_gauge" id="n3_pm10"></div>
-              <label class="gauge-label" id="meter-label">OPC N3 PM10</label>
-            </div>
+            <p class='text-center pb-4' id='last_update_n3'> LAST UPDATED ON: </p>
           </div>
-          <p class='text-center pb-6' id = 'last_update_n3'> LAST UPDATED ON: </p>
-          <h2 class="text-center">Urban Sciences Atmos Live</h2>
-          <div class="row">
-            <div class="card card-default col gauge_container">
-              <div data-include="pm_gauge" id="atmos_pm1"></div>
-              <label class="gauge-label" id="meter-label">ATMOS PM1.0</label>
+         
+         
+          <div name="Gauge Atmos">
+            <h2 class="text-center pb-10">Urban Sciences Atmos Live</h2>
+            <div class="row">
+              <div class="card card-default col gauge_container">
+                <div data-include="pm_gauge" id="atmos_pm1"></div>
+                <label class="gauge-label" id="meter-label">ATMOS PM1.0</label>
+              </div>
+              <div class="card card-default col gauge_container">
+                <div data-include="pm_gauge" id="atmos_pm25" style="justify-content: center"></div>
+                <label class="gauge-label" id="meter-label">ATMOS PM2.5</label>
+              </div>
+              <div class="card card-default col gauge_container">
+                <div data-include="pm_gauge" id="atmos_pm10"></div>
+                <label class="gauge-label" id="meter-label">ATMOS PM10</label>
+              </div>
             </div>
-            <div class="card card-default col gauge_container">
-              <div data-include="pm_gauge" id="atmos_pm25" style="justify-content: center"></div>
-              <label class="gauge-label" id="meter-label">ATMOS PM2.5</label>
-            </div>
-            <div class="card card-default col gauge_container">
-              <div data-include="pm_gauge" id="atmos_pm10"></div>
-              <label class="gauge-label" id="meter-label">ATMOS PM10</label>
-            </div>
+            <p class='text-center pb-4' id='last_update_atmos'> LAST UPDATED ON: </p>
           </div>
-          <p class='text-center pb-10' id = 'last_update_atmos'> LAST UPDATED ON: </p>
+         
+         
+          <div name="Gauge Grimm OPC">
+            <h2 class="text-center pb-10">Reference GRIMM OPC Live</h2>
+            <div class="row">
+              <div class="card card-default col gauge_container">
+                <div data-include="pm_gauge" id="grimm_pm1"></div>
+                <label class="gauge-label" id="meter-label">GRIMM PM1.0</label>
+              </div>
+              <div class="card card-default col gauge_container">
+                <div data-include="pm_gauge" id="grimm_pm25" style="justify-content: center"></div>
+                <label class="gauge-label" id="meter-label">GRIMM PM2.5</label>
+              </div>
+              <div class="card card-default col gauge_container">
+                <div data-include="pm_gauge" id="grimm_pm10"></div>
+                <label class="gauge-label" id="meter-label">GRIMM PM10</label>
+              </div>
+            </div>
+            <p class='text-center pb-4' id='last_update_grimm'> LAST UPDATED ON: </p>
+          </div>
         </div>
       </div>
       <script>
@@ -89,12 +116,12 @@
         import { updateDial } from './assets/js/gauge.js';
 
 
-        var options = {year: 'numeric', month: 'long', day: 'numeric', hour: 'numeric', minute: 'numeric', second: 'numeric'};
+        var options = { year: 'numeric', month: 'long', day: 'numeric', hour: 'numeric', minute: 'numeric', second: 'numeric' };
 
         async function getLiveN3() {
           const response = await fetch('/getlive/N3')
           await response.json().then(data => {
-            $('#N3_live').text(data['pm2.5']);
+            //$('#N3_live').text(data['pm2.5']);
             $('#last_update_n3').text('Last Updates On: ' + new Date(data['timestamp'].replace('T', ' ')).toLocaleDateString('en-US', options));
             updateDial(data['pm1'], 'n3_pm1');
             updateDial(data['pm2.5'], 'n3_pm25');
@@ -105,7 +132,7 @@
         async function getLiveAtmos() {
           const response = await fetch('/getlive/Atmos')
           await response.json().then(data => {
-            $('#Atmos_live').text(data['pm2.5']);
+            //$('#Atmos_live').text(data['pm2.5']);
             $('#last_update_atmos').text('Last Updated On: ' + new Date(data['timestamp']).toLocaleDateString('en-US', options));
             updateDial(data['pm1'], 'atmos_pm1');
             updateDial(data['pm2.5'], 'atmos_pm25');
@@ -113,10 +140,23 @@
           });
         }
 
-        setTimeout(getLiveAtmos(),2000);
+        async function getLiveGrimm() {
+          const response = await fetch('/getlive/Grimm')
+          await response.json().then(data => {
+            //$('#Grimm_live').text(data['pm2.5']);
+            $('#last_update_grimm').text('Last Updated On: ' + new Date(data['timestamp']).toLocaleDateString('en-US', options));
+            updateDial(data['pm1'], 'grimm_pm1');
+            updateDial(data['pm2.5'], 'grimm_pm25');
+            updateDial(data['pm10'], 'grimm_pm10');
+          });
+        }
 
-        setInterval(getLiveN3, 1000);
+        setTimeout(getLiveAtmos, 5000);
+        setTimeout(getLiveGrimm, 5000);
+
+        setInterval(getLiveN3, 5000);
         setInterval(getLiveAtmos, 10000);
+        setInterval(getLiveGrimm, 3600000);
       </script>
 </body>
 
