Added regression plots to the dashboard. Created foundations for ML models

--- a/src/data_collection/static/assets/css/sleek.css
+++ b/src/data_collection/static/assets/css/sleek.css
@@ -4806,6 +4806,11 @@ input[type="button"].btn-block {
   margin-left: 0;
 }
 
+.square {
+  width: 30vw;
+  height: 30vw;
+}
+
 .card > .list-group {
   border-top: inherit;
   border-bottom: inherit;
