Update Grimm every 10s

--- a/src/data_collection/templates/dashboard.html
+++ b/src/data_collection/templates/dashboard.html
@@ -160,7 +160,7 @@
 
         setInterval(getLiveN3, 5000);
         setInterval(getLiveAtmos, 10000);
-        setInterval(getLiveGrimm, 3600000);
+        setInterval(getLiveGrimm, 10000);
 
         
         create_regression_plot()
